capture mouse input and calc square-clicked-on

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,5 +54,7 @@
     </tr>
   </table>
 
-  <canvas #canvas width="500" height="500"></canvas>
+  <canvas #canvas width="500" height="500"
+    (click)="handleCanvasClick($event)">
+  </canvas>
 </div>
