--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,14 @@
     border: solid 1px black;
   }
 }
+
+.legend-color-cell {
+  display: flex;
+  justify-content: center;
+
+  .legend-color {
+    border: 1px solid black;
+    width: 30px;
+    height: 30px;
+  }
+}
